# zero-to-production-in-rust

./: Cargo.toml  Dockerfile  configuration.yaml  sqlx-data.json
.github/workflows/: general.yml
src/: configuration.rs  lib.rs  main.rs  startup.rs
tests/: health_check.rs
