[package]
name = "zero2prod"
version = "0.1.0"
authors = ["yt"]
edition = "2018"

[lib]
path = "src/lib.rs"

# 別のソースファイルに書かれた main() 関数を実行したい時
[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.5"
